# udacity

carnd/CarND-Capstone/: README.md  requirements.txt  requirements_debug.txt
carnd/CarND-Capstone/ros/src/waypoint_util/: CMakeLists.txt  package.xml  setup.py
carnd/CarND-Capstone/ros/src/waypoint_util/scripts/waypoint_util/: Waypoints.py  __init__.py
carnd/CarND-P1-LaneLines/: README.md  finding-lane-lines.ipynb
carnd/CarND-P10-MPCProject/: README.md
carnd/CarND-P11-Path-Planning-Project/: CMakeLists.txt  README.md
carnd/CarND-P12-Semantic-Segmentation/: README.md  main.py
carnd/CarND-P2-TrafficSignClassifier/: README.md  Traffic_Sign_Classifier.ipynb
carnd/CarND-P5-Vehicle-Detection/: README.md  clf.p  scaler.p
carnd/CarND-P6-ExtendedKalmanFilter/: README.md
carnd/CarND-P7-UnscentedKalmanFilterProject/: NIS.csv  README.md
carnd/CarND-P8-KidnappedVehicleProject/: README.md
carnd/CarND-P9-PIDControlProject/: README.md
carnd/Image-Classification/: .gitignore  Model Testing.ipynb  README.md  create_tfrecords.py  to_annotations.py
carnd/behavior-planner/: CMakeLists.txt
drlnd/: .gitignore
drlnd/lab_alpha-zero/: ConnectN.py  MCTS.py  Play.py  alphazero-TicTacToe.ipynb
drlnd/lab_marl/: OUNoise.py  ddpg.py  envs.py  maddpg.py  main.py  utilities.py  workspace_utils.py
drlnd/p1_navigation/: .gitignore  README.md  Report.md  main.py
front_end_web_dev/: .gitignore
private-ai/: Federated Learning Project.ipynb  PATE Project.ipynb  Section 3 - Securing Federated Learning.ipynb  Secure Federated Learning Project.ipynb
(+473 files in other folders)
